--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@ button {
     cursor: pointer;
 }
 
+ul {
+    list-style: none;
+}
+
 :root {
     --blue-color: #2196F3;
     --gray-color: #757575;
